--- a/css/home_page.css
+++ b/css/home_page.css
@@ -1,6 +1,7 @@
 .navbar {
     background: #00a65a;
     height: 40px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,5 +11,73 @@
     text-align: center;
     font-size: 20px;
     font-family: Arial;
-    position: fixed;
+    margin-top: 0px;
+    z-index: 10;
 }
+
+.menuTop {
+    font-size: 20px;
+    background: #00a65a;
+    height: 40px;
+    text-align: center;
+    text-align-all: center;
+    color: white;
+    font-family: Akbaal;
+    padding-right: 20px;
+    padding-top: 5px;
+    z-index: 10;
+    width: 250px;
+}
+
+.menuImg label {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.menuImg {
+    width: auto;
+    height: 34px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: inline-block;
+    padding-left: 50px;
+}
+
+.btnMenu {
+    background: #00a65a;
+    border: none;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    transition: all 0.3s ease 0s;
+}
+
+.btnMenu:hover {
+    background: #009453;
+}
+
+.navMenuBtnList {
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: #00a65a;
+    color: white;
+    cursor: pointer;
+    text-align: center;
+    font-size: 16px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.navMenuBtnList:hover {
+    background: #009453;
+}
+
+.addAdminDiv {
+    padding: 20px;
+    width: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
