--- a/css/home_page.css
+++ b/css/home_page.css
@@ -3,12 +3,11 @@
     height: 40px;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     align-self: center;
     overflow: hidden;
     color: white;
-    text-align: center;
     font-size: 20px;
     font-family: Arial;
     margin-top: 0px;
@@ -27,6 +26,7 @@
     padding-top: 5px;
     z-index: 10;
     width: 250px;
+
 }
 
 .menuImg label {
@@ -56,6 +56,10 @@
     background: #009453;
 }
 
+.btnMenu:focus {
+    outline: 0;
+}
+
 .navMenuBtnList {
     display: block;
     width: 100%;
@@ -73,11 +77,77 @@
     background: #009453;
 }
 
+.navMenuBtnList:focus {
+    outline: 0;
+}
+
 .addAdminDiv {
     padding: 20px;
-    width: 80%;
+    width: 60%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
+.profileWithNameLabel {
+    margin-right: -15px;
+}
+
+.profileWithNameLabel:hover {
+    background: #009453;
+    cursor: pointer;
+    margin-right: -15px;
+}
+
+/*
+*Sub Menu Styles
+*/
+
+.dropdown-content {
+    display: block;
+    right: 0;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    font-size: 14px;
+    font-family: Arial;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Nav Bar Home Button Styles */
+.navHomeButton {
+    display: inline-block;
+    left: 60px;
+    position: absolute;
+    background-color: transparent; /* make the button transparent */
+    background-repeat: no-repeat; /* make the background image appear only once */
+    background-position: 0px 0px; /* equivalent to 'top left' */
+    border: none; /* assuming we don't want any borders */
+    cursor: pointer; /* make the cursor like hovering over an <a> element */
+    height: 30px; /* make this the size of your image */
+    padding-left: 16px; /* make text start to the right of the image */
+    vertical-align: middle;
+}
+
+.navHomeButton :hover {
+    background: #009453;
+}
+
+.navHomeButton:focus {
+    outline: 0;
+}
+
 
