--- a/css/home_page.css
+++ b/css/home_page.css
@@ -85,7 +85,7 @@ h2, h3, h4, h5, h6 {
     outline: 0;
 }
 
-.addAdminDiv {
+.addAdminDiv,.courseManagementContainer {
     padding: 20px;
     width: 60%;
     display: block;
